Fix z-index issue causing menubar submenu being displayed under some elements

--- a/src/assets/app.css
+++ b/src/assets/app.css
@@ -152,3 +152,7 @@ body .p-button {
 .mavedb-help-tooltip-button > .p-button-icon {
   font-size: 0.5rem !important;
 }
+
+.mavedb-toolbar .p-menubar-submenu {
+  z-index: 1100 !important;
+}
